--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 											<li id="about-me"><a id="anchor" href="#" class="button big">About ME</a></li>
 										</ul>
 									</div>
-									<span class="image object">
-										<img src="images/184235916_2250902881715883_971109262181963669_n.jpg" alt="" style="transform: scale(0.9);"/>
+									<span id="span-img" class="image object">
+										<img id="pic" src="images/184235916_2250902881715883_971109262181963669_npiccc.jpg" alt="" />
 									</span>
 								</section>
 
