resizing main img

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" href="images/favicon.ico">
 		<title>Ahmed Hamdy - a Web developer</title>
@@ -49,7 +49,7 @@
 										</ul>
 									</div>
 									<span id="span-img" class="image object">
-										<img id="pic" src="images/184235916_2250902881715883_971109262181963669_npiccc.jpg" alt="" />
+										<img id="pic" src="images/new-img-size.jpg" alt="" />
 									</span>
 								</section>
 
