--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" href="images/favicon.ico">
-		<title>Ahmed Hamdy - a Web developer</title>
+		<link rel="icon" href="images/f68cb072-13e1-432d-8f1b-fa067b36be53.jpg">
+		<title>Ahmed Hamdy</title>
 	</head>
 	<body class="is-preload">
 
@@ -23,12 +23,13 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo">First, <strong>solve the problem.</strong> Then, write the code.</a>
+									<a href="index.html" class="logo"><strong>&#10095;&#95;</strong> Ahmed Hamdy</a>
 									<ul class="icons">
+										<li><a href="mailto:Thisisahmedhamdy@gmail.com" class="icon fa-envelope"><span class="label">Twitter</span></a></li>
 										<li><a href="https://twitter.com/Ahmed_Hamdyx" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="https://github.com/AhmedHHamdy" class="icon brands fa-github"><span class="label">Github</span></a></li>
 										<li><a href="https://www.linkedin.com/in/ahmed-hamdy-a71a28181/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-										<li><a href="https://www.instagram.com/hamdycoding/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://github.com/AhmedHHamdy" class="icon brands fa-github"><span class="label">Github</span></a></li>
+										<!-- <li><a href="https://www.instagram.com/hamdycoding/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
 										<li><a href="https://dribbble.com/Hamdy" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 									</ul>
 								</header>
@@ -37,24 +38,24 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1 id="heading">Hi, I’m Ahmed,<br />
-											Your Next Software Engineer.</h1>
-											<p id="desc" class="info">I am a Software Engineer based in Cairo <br>and I help designers, small agencies and businesses bring their ideas to life.<br> VS Code and coffee.</p>
+											<h1 id="heading">Hey there, I&apos;m Ahmed. I'm a Full-Stack Software Engineer.</h1>
+											<p id="desc" class="info">I am a Software Engineer based in Cairo<br>and I help designers, small agencies and businesses bring their ideas to life.<br><br></p>
 											<br id="break" class="hidden">
 											<p id="desc-2" class="hidden info">I know how to create your website to run across devices using the latest technologies available.<br><br>My goals are to focus on typography, content and conveying the message that you want to send.</p>
 										</header>
 										<!-- <p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p> -->
 										<ul class="actions">
 											<li id="about-me"><a id="anchor" href="#" class="button big">About ME</a></li>
+											<li id="Projects"><a id="anchor" href="#projects" class="button big">Projects</a></li>
 										</ul>
 									</div>
 									<span id="span-img" class="image object">
-										<img id="pic" src="images/new-img-size.jpg" alt="" />
+										<img id="pic" src="images/f68cb072-13e1-432d-8f1b-fa067b36be53.jpg" alt="" />
 									</span>
 								</section>
 
 							<!-- Section -->
-								<section>
+								<!-- <section>
 									<header class="major">
 										<h2>My Services</h2>
 									</header>
@@ -88,10 +89,20 @@
 											</div>
 										</article>
 									</div>
-								</section>
+								</section> -->
+
+								<section>
+									<header class="major" id="hero">
+										<h2>Is your web presence working for you?</h2>
+									</header>
+									<article class="content">
+										<p>If someone is looking for the services you provide, will your website draw them in? Will the website adjust to the size of the user's device? Responsive and accessible websites are no longer bonus attributes - they are essential.</p>
+										<p>My goal is to provide responsive and accessible websites to small businesses and individuals around me. Whether you are looking for a new website, or updating an existing website for the mobile age, I can help. Providing a location where interested parties can learn about you is what I offer. How can I help you today?</p>
+									</article>
+								 </section>
 
 							<!-- Section -->
-								<section>
+								<section id="projects">
 									<header class="major">
 										<h2>Latest Projects</h2>
 									</header>
@@ -99,7 +110,7 @@
 										<article>
 											<a href="https://hairsalonbrooklen.netlify.app/" class="image"><img src="images/screencapture-hairsalonbrooklen-netlify-app-2022-03-05-13_14_13.png" alt="" /></a>
 											<h3>Hair & Co BKLYN</h3>
-											<p>hair salons in Brooklyn specializes in unique hair color, cuts and designs for every hair type.</p>
+											<p><strong>HTML5 & CSS3 -</strong> Hair salons in Brooklyn specializes in unique hair color, cuts and designs for every hair type.</p>
 											<ul class="actions">
 												<li><a href="https://hairsalonbrooklen.netlify.app/" class="button">More</a></li>
 											</ul>
@@ -108,18 +119,26 @@
 										<article>
 											<a href="https://luminaryagency.netlify.app/" class="image"><img src="images/screencapture-file-C-Users-Hamdy-Desktop-html5up-directive-index-html-2022-03-05-14_07_50.png" alt="" /></a>
 											<h3>Luminary Agency</h3>
-											<p>is a digital agency passionate about storytelling, visual design, and technology.</p>
+											<p><strong>HTML5 & CSS3 -</strong> A digital agency passionate about storytelling, visual design, and technology.</p>
 											<ul class="actions">
 												<li><a href="https://luminaryagency.netlify.app/" class="button">More</a></li>
 											</ul>
 										</article>
 										
 										<article>
-											<a href="https://jamesmyer.netlify.app/" class="image"><img src="images/screencapture-jamesmyer-netlify-app-2022-03-05-14_51_53.png" alt="" /></a>
-											<h3>James Myer | Photography</h3>
-											<p>photographer specialising in travel and people photography.</p>
+											<a href="https://tictactoeappgame.netlify.app/" class="image"><img src="images/FireShot Capture 005 - TicTacToe - tictactoeappgame.netlify.app.png" alt="" /></a>
+											<h3>Tic Tac Toe Game</h3>
+											<p><strong>HTML5, CSS3, & Javascript -</strong> Tic Tac Toe is a two-player game in which the objective is to take turns and mark the correct spaces in a 3x3 grid.</p>
 											<ul class="actions">
-												<li><a href="https://jamesmyer.netlify.app/" class="button">More</a></li>
+												<li><a href="https://tictactoeappgame.netlify.app/" class="button">More</a></li>
+											</ul>
+										</article>
+										<article>
+											<a href="https://nasapictureofthedayapi.netlify.app/" class="image"><img src="images/screencapture-nasapictureofthedayapi-netlify-app-2022-04-25-12_43_54.png" alt="" /></a>
+											<h3>NASA Astronomy</h3>
+											<p><strong>HTML5, CSS3, & Javascript -</strong> A web application using APOD API. Gets data from NASA's database and display it on the website.</p>
+											<ul class="actions">
+												<li><a href="https://nasapictureofthedayapi.netlify.app/" class="button">More</a></li>
 											</ul>
 										</article>
 										<!-- <article>
@@ -227,7 +246,7 @@
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
-									<p>I am currently accepting new freelance clients, interesting project opportunities.</p>
+									<p>Reach out and let's start a conversation!.</p>
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="mailto:Thisisahmedhamdy@gmail.com">Thisisahmedhamdy@gmail.com</a></li>
 										<li class="icon brands fa-twitter"><a href="https://twitter.com/Ahmed_Hamdyx">Ahmed_Hamdyx.com/Twitter</a></li>
@@ -236,6 +255,25 @@
 
 									</ul>
 								</section>
+
+
+								<section id="contactMe">
+									<header class="major">
+										<h2>Let's Connect!</h2>
+									</header>
+									<p>I am currently accepting new freelance clients, interesting project opportunities.</p>
+									<section class="container">
+										<form method='POST' data-netlify="true" name='contact'>
+											<!-- <input type='hidden' name='form-name' value='contact' /> -->
+											<input type="text" name="Name" placeholder="Name"  required>
+											<input type="email" name="Email" placeholder="Email" required>
+											<textarea name="Message" placeholder="Message" id="email" rows="6" required></textarea>
+											<button type="submit">Submit</button>
+										</form>
+									</section>
+
+								</section>
+
 
 							<!-- Footer -->
 								<footer id="footer">
@@ -246,6 +284,7 @@
 					</div>
 
 			</div>
+
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
