--- a/index.html
+++ b/index.html
@@ -108,37 +108,37 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="https://hairsalonbrooklen.netlify.app/" class="image"><img src="images/screencapture-hairsalonbrooklen-netlify-app-2022-03-05-13_14_13.png" alt="" /></a>
+											<a href="https://hairsalonbrooklen.netlify.app/" target="_blank" class="image"><img src="images/screencapture-hairsalonbrooklen-netlify-app-2022-03-05-13_14_13.png" alt="" /></a>
 											<h3>Hair & Co BKLYN</h3>
 											<p><strong>HTML5 & CSS3 -</strong> Hair salons in Brooklyn specializes in unique hair color, cuts and designs for every hair type.</p>
 											<ul class="actions">
-												<li><a href="https://hairsalonbrooklen.netlify.app/" class="button">More</a></li>
+												<li><a target="_blank" href="https://hairsalonbrooklen.netlify.app/" class="button">More</a></li>
 											</ul>
 										</article>
 
 										<article>
-											<a href="https://luminaryagency.netlify.app/" class="image"><img src="images/screencapture-file-C-Users-Hamdy-Desktop-html5up-directive-index-html-2022-03-05-14_07_50.png" alt="" /></a>
+											<a href="https://luminaryagency.netlify.app/" target="_blank" class="image"><img src="images/screencapture-file-C-Users-Hamdy-Desktop-html5up-directive-index-html-2022-03-05-14_07_50.png" alt="" /></a>
 											<h3>Luminary Agency</h3>
 											<p><strong>HTML5 & CSS3 -</strong> A digital agency passionate about storytelling, visual design, and technology.</p>
 											<ul class="actions">
-												<li><a href="https://luminaryagency.netlify.app/" class="button">More</a></li>
+												<li><a target="_blank" href="https://luminaryagency.netlify.app/" class="button">More</a></li>
 											</ul>
 										</article>
 										
 										<article>
-											<a href="https://tictactoeappgame.netlify.app/" class="image"><img src="images/FireShot Capture 005 - TicTacToe - tictactoeappgame.netlify.app.png" alt="" /></a>
+											<a href="https://tictactoeappgame.netlify.app/" target="_blank" class="image"><img src="images/FireShot Capture 005 - TicTacToe - tictactoeappgame.netlify.app.png" alt="" /></a>
 											<h3>Tic Tac Toe Game</h3>
 											<p><strong>HTML5, CSS3, & Javascript -</strong> Tic Tac Toe is a two-player game in which the objective is to take turns and mark the correct spaces in a 3x3 grid.</p>
 											<ul class="actions">
-												<li><a href="https://tictactoeappgame.netlify.app/" class="button">More</a></li>
+												<li><a target="_blank" href="https://tictactoeappgame.netlify.app/" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="https://nasapictureofthedayapi.netlify.app/" class="image"><img src="images/screencapture-nasapictureofthedayapi-netlify-app-2022-04-25-12_43_54.png" alt="" /></a>
+											<a href="https://nasapictureofthedayapi.netlify.app/"  target="_blank" class="image"><img src="images/screencapture-nasapictureofthedayapi-netlify-app-2022-04-25-12_43_54.png" alt="" /></a>
 											<h3>NASA Astronomy</h3>
 											<p><strong>HTML5, CSS3, & Javascript -</strong> A web application using APOD API. Gets data from NASA's database and display it on the website.</p>
 											<ul class="actions">
-												<li><a href="https://nasapictureofthedayapi.netlify.app/" class="button">More</a></li>
+												<li><a target="_blank" href="https://nasapictureofthedayapi.netlify.app/" class="button">More</a></li>
 											</ul>
 										</article>
 										<!-- <article>
