adding Darkmode feature

--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>&#10095;&#95;</strong> Ahmed Hamdy</a>
+									<a href="index.html" class="logo" ><strong id="logoHeaderS">&#10095;&#95;</strong> First, <strong id="logoHeader">solve the problem.</strong> Then, write the code.</a>
 									<ul class="icons">
+										<li><a name="Toggle Night Mode" title="Toggle Night Mode" id="nightmode" class="icon fa-moon night day"><span class="label">Night-Mode</span></a></li>
 										<li><a href="mailto:Thisisahmedhamdy@gmail.com" class="icon fa-envelope"><span class="label">Twitter</span></a></li>
-										<li><a href="https://twitter.com/Ahmed_Hamdyx" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="https://www.linkedin.com/in/ahmed-hamdy-a71a28181/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-										<li><a href="https://github.com/AhmedHHamdy" class="icon brands fa-github"><span class="label">Github</span></a></li>
+										<li><a target="_blank" href="https://twitter.com/Ahmed_Hamdyx" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a target="_blank" href="https://www.linkedin.com/in/ahmed-hamdy-a71a28181/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+										<li><a target="_blank" href="https://github.com/AhmedHHamdy" class="icon brands fa-github"><span class="label">Github</span></a></li>
 										<!-- <li><a href="https://www.instagram.com/hamdycoding/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
-										<li><a href="https://dribbble.com/Hamdy" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+										<li><a target="_blank" href="https://dribbble.com/Hamdy" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 									</ul>
 								</header>
 
@@ -104,13 +105,13 @@
 							<!-- Section -->
 								<section id="projects">
 									<header class="major">
-										<h2>Latest Projects</h2>
+										<h2 id="projectsHeader">Latest Projects</h2>
 									</header>
 									<div class="posts">
 										<article>
 											<a href="https://hairsalonbrooklen.netlify.app/" target="_blank" class="image"><img src="images/screencapture-hairsalonbrooklen-netlify-app-2022-03-05-13_14_13.png" alt="" /></a>
-											<h3>Hair & Co BKLYN</h3>
-											<p><strong>HTML5 & CSS3 -</strong> Hair salons in Brooklyn specializes in unique hair color, cuts and designs for every hair type.</p>
+											<h3 id="h3One">Hair & Co BKLYN</h3>
+											<p><strong id="toolsOne">HTML5 & CSS3 -</strong> Hair salons in Brooklyn specializes in unique hair color, cuts and designs for every hair type.</p>
 											<ul class="actions">
 												<li><a target="_blank" href="https://hairsalonbrooklen.netlify.app/" class="button">More</a></li>
 											</ul>
@@ -118,8 +119,8 @@
 
 										<article>
 											<a href="https://luminaryagency.netlify.app/" target="_blank" class="image"><img src="images/screencapture-file-C-Users-Hamdy-Desktop-html5up-directive-index-html-2022-03-05-14_07_50.png" alt="" /></a>
-											<h3>Luminary Agency</h3>
-											<p><strong>HTML5 & CSS3 -</strong> A digital agency passionate about storytelling, visual design, and technology.</p>
+											<h3 id="h3Two">Luminary Agency</h3>
+											<p><strong id="toolsTwo">HTML5 & CSS3 -</strong> A digital agency passionate about storytelling, visual design, and technology.</p>
 											<ul class="actions">
 												<li><a target="_blank" href="https://luminaryagency.netlify.app/" class="button">More</a></li>
 											</ul>
@@ -127,16 +128,16 @@
 										
 										<article>
 											<a href="https://tictactoeappgame.netlify.app/" target="_blank" class="image"><img src="images/FireShot Capture 005 - TicTacToe - tictactoeappgame.netlify.app.png" alt="" /></a>
-											<h3>Tic Tac Toe Game</h3>
-											<p><strong>HTML5, CSS3, & Javascript -</strong> Tic Tac Toe is a two-player game in which the objective is to take turns and mark the correct spaces in a 3x3 grid.</p>
+											<h3 id="h3Three">Tic Tac Toe Game</h3>
+											<p><strong id="toolsThree">HTML5, CSS3, & Javascript -</strong> Tic Tac Toe is a two-player game in which the objective is to take turns and mark the correct spaces in a 3x3 grid.</p>
 											<ul class="actions">
 												<li><a target="_blank" href="https://tictactoeappgame.netlify.app/" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
 											<a href="https://nasapictureofthedayapi.netlify.app/"  target="_blank" class="image"><img src="images/screencapture-nasapictureofthedayapi-netlify-app-2022-04-25-12_43_54.png" alt="" /></a>
-											<h3>NASA Astronomy</h3>
-											<p><strong>HTML5, CSS3, & Javascript -</strong> A web application using APOD API. Gets data from NASA's database and display it on the website.</p>
+											<h3 id="h3Four">NASA Astronomy</h3>
+											<p><strong id="toolsFour">HTML5, CSS3, & Javascript -</strong> A web application using APOD API. Gets data from NASA's database and display it on the website.</p>
 											<ul class="actions">
 												<li><a target="_blank" href="https://nasapictureofthedayapi.netlify.app/" class="button">More</a></li>
 											</ul>
@@ -244,7 +245,7 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Get in touch</h2>
+										<h2 id="getInTouchHeader">Get in touch</h2>
 									</header>
 									<p>Reach out and let's start a conversation!.</p>
 									<ul class="contact">
@@ -259,7 +260,7 @@
 
 								<section id="contactMe">
 									<header class="major">
-										<h2>Let's Connect!</h2>
+										<h2 id="letsConnectHeader">Let's Connect!</h2>
 									</header>
 									<p>I am currently accepting new freelance clients, interesting project opportunities.</p>
 									<section class="container">
