Updating-Twitter-link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 									<ul class="icons">
 										<li><a name="Toggle Night Mode" title="Toggle Night Mode" id="nightmode" class="icon fa-moon night day"><span class="label">Night-Mode</span></a></li>
 										<li><a href="mailto:Thisisahmedhamdy@gmail.com" class="icon fa-envelope"><span class="label">Twitter</span></a></li>
-										<li><a target="_blank" href="https://twitter.com/Ahmed_Hamdyx" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a target="_blank" href="https://twitter.com/AhmedHHamdyx" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a target="_blank" href="https://www.linkedin.com/in/ahmed-hamdy-a71a28181/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 										<li><a target="_blank" href="https://github.com/AhmedHHamdy" class="icon brands fa-github"><span class="label">Github</span></a></li>
 										<!-- <li><a href="https://www.instagram.com/hamdycoding/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
@@ -250,7 +250,7 @@
 									<p>Reach out and let's start a conversation!.</p>
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="mailto:Thisisahmedhamdy@gmail.com">Thisisahmedhamdy@gmail.com</a></li>
-										<li class="icon brands fa-twitter"><a href="https://twitter.com/Ahmed_Hamdyx">Ahmed_Hamdyx.com/Twitter</a></li>
+										<li class="icon brands fa-twitter"><a href="https://twitter.com/AhmedHHamdyx">AhmedHHamdyx.com/Twitter</a></li>
 										<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/ahmed-hamdy-a71a28181/">AhmedHamdy.com/Linkedin</a></li>
 										<li class="icon brands fa-github"><a href="https://github.com/AhmedHHamdy">AhmedHHamdy.com/Github</a></li>
 
